--- a/package.json
+++ b/package.json
@@ -6,13 +6,24 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "server": "node server.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.27.3",
+    "@instructor-ai/instructor": "^1.7.0",
+    "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "openai": "^4.82.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sass": "^1.83.4"
+    "sass": "^1.83.4",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
